--- a/index.html
+++ b/index.html
@@ -10,175 +10,181 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/else/favicon_pikachu.png"
+    />
     <title>Document</title>
   </head>
   <body>
+    <div class="main-container">
+      <p class="lead">TIMELINE <br /><span>of Pokémon games</span></p>
 
-    <p class="lead">
-        <img src="https://archives.bulbagarden.net/media/upload/thumb/f/ff/Smash_Bros_Brawl_Pokemon_Symbol.png/240px-Smash_Bros_Brawl_Pokemon_Symbol.png" width="120">
-  TIMELINE <span>of Pokémon games</span>
-</p>
-
-<figure class="text-end">
-  <blockquote class="blockquote">
-    <p>Everything I did as a kid is kind of rolled into one - that's what Pokemon is.</p>
-  </blockquote>
-  <figcaption class="blockquote-footer">
-    Satoshi Tajiri, <cite title="Source Title">Creator of <i>Pokémon<i></i></cite>
-  </figcaption>
-</figure>
-
-    <div class="timeline"></div>
-    <div class="container">
-      <div class="card-wrapper">
-        <div class="card left" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/9/95/Yellow_EN_boxart.png/400px-Yellow_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>1996</b><br />
-              Red, Blue and Yellow
-            </p>
+      <figure class="text-end">
+        <blockquote class="blockquote">
+          <p>
+            “ Everything I did as a kid is kind of rolled into one - that's what
+            Pokemon is. ”
+          </p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Satoshi Tajiri,
+          <cite title="Source Title">Creator of <i>Pokémon</i></cite>
+        </figcaption>
+      </figure>
+      <main>
+        <div class="timeline"></div>
+        <div class="container">
+          <div class="card-wrapper">
+            <div class="card left" style="max-width: 200px">
+              <img
+                src="./images/games/yellow.png"
+                class="card-img-top"
+                alt="Yellow game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>1996</b><br />
+                  Red, Blue and Yellow
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card right" style="max-width: 200px">
+              <img
+                src="./images/games/gold_and_silver.jpg"
+                class="card-img-top"
+                alt="Gold game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>1999</b><br />
+                  Gold and Silver
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card left" style="max-width: 200px">
+              <img
+                src="./images/games/ruby_and_sapphire.png"
+                class="card-img-top"
+                alt="Ruby game version"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2003</b><br />
+                  Ruby and Sapphire
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card right" style="max-width: 200px">
+              <img
+                src="images/games/diamond_and_pearl.jpg"
+                class="card-img-top"
+                alt="Diamond game version"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2007</b><br />
+                  Diamond and Pearl
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card left" style="max-width: 200px">
+              <img
+                src="images/games/black_and_white.png"
+                class="card-img-top"
+                alt="Black game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2011</b><br />
+                  Black and White
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card right" style="max-width: 200px">
+              <img
+                src="images/games/x_and_y.png"
+                class="card-img-top"
+                alt="x game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2011</b><br />
+                  X and Y
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card left" style="max-width: 200px">
+              <img
+                src="./images/games/sun_and_moon.png"
+                class="card-img-top"
+                alt="Sun game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2016</b><br />
+                  Sun and Moon
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card right" style="max-width: 200px">
+              <img
+                src="./images/games/sword_and_shield.png"
+                class="card-img-top"
+                alt="Shield game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2019</b><br />
+                  Sword and Shield
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="card-wrapper">
+            <div class="card left" style="max-width: 200px">
+              <img
+                src="./images/games/scarlet_and_violet.png"
+                class="card-img-top"
+                alt="Violet game cover"
+                height="100"
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  <b>2022</b><br />
+                  Scarlet and Violet
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/f/f5/Silver_EN_boxart.png/400px-Silver_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>1999</b><br />
-              Gold and Silver
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/5/5f/Ruby_EN_boxart.png/400px-Ruby_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2003</b><br />
-              Ruby and Sapphire
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/6/69/Diamond_EN_boxart.jpg/400px-Diamond_EN_boxart.jpg"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2007</b><br />
-              Diamond and Pearl
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/0/08/White_EN_boxart.png/400px-White_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2011</b><br />
-              Black and White
-            </p>
-          </div>
-        </div>
-      </div>
-            <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/2/27/X_EN_boxart.png/400px-X_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2011</b><br />
-              X and Y
-            </p>
-          </div>
-        </div>
-      </div>
-       <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/0/06/Sun_EN_boxart.png/400px-Sun_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2016</b><br />
-              Sun and Moon
-            </p>
-          </div>
-        </div>
-      </div>
-       <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/8/8d/Shield_EN_boxart.png/350px-Shield_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2019</b><br />
-              Sword and Shield
-            </p>
-          </div>
-        </div>
-      </div>
-             <div class="card-wrapper">
-        <div class="card" style="max-width: 200px">
-          <img
-            src="https://archives.bulbagarden.net/media/upload/thumb/1/13/Violet_EN_boxart.png/350px-Violet_EN_boxart.png"
-            class="card-img-top"
-            alt="..."
-            height="100"
-          />
-          <div class="card-body">
-            <p class="card-text">
-              <b>2022</b><br />
-              Scarlet and Violet
-            </p>
-          </div>
-        </div>
-      </div>
+        <footer>
+          <p>© 2024 Copyright marion.codes ♥</p>
+        </footer>
+      </main>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
