--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       type="image/x-icon"
       href="./images/else/favicon_pikachu.png"
     />
-    <title>Document</title>
+    <title>Pokémon Games Timeline</title>
+         <meta name="description" content="Timeline of Major Pokémon Games">
+         <meta property="og:image" content="https://m-gm50.github.io/pokemon-games-timeline/images/else/thumbnail.png" />
   </head>
   <body>
     <div class="main-container">
@@ -25,7 +27,7 @@
         <blockquote class="blockquote">
           <p>
             “ Everything I did as a kid is kind of rolled into one - that's what
-            Pokemon is. ”
+            Pokémon is. ”
           </p>
         </blockquote>
         <figcaption class="blockquote-footer">
