--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       href="./images/else/favicon_pikachu.png"
     />
     <title>Pokémon Games Timeline</title>
-         <meta name="description" content="Timeline of Major Pokémon Games">
-         <meta property="og:image" content="https://m-gm50.github.io/pokemon-games-timeline/images/else/thumbnail.png" />
+    <meta name="description" content="Timeline of Major Pokémon Games" />
+    <meta
+      property="og:image"
+      content="https://m-gm50.github.io/pokemon-games-timeline/images/else/thumbnail.png"
+    />
   </head>
   <body>
     <div class="main-container">
@@ -184,7 +187,9 @@
           </div>
         </div>
         <footer>
-          <p>© 2024 Copyright marion.codes ♥</p>
+          <p>
+            © 2024 Copyright <a href="http://marion.codes">marion.codes</a> ♥
+          </p>
         </footer>
       </main>
     </div>
